[gd_scene load_steps=5 format=3 uid="uid://dxabw2v6i7dwx"]

[ext_resource type="Script" uid="uid://8rnqt0ys6yeg" path="res://scenes/main_menu/main_menu.gd" id="1_fsom3"]
[ext_resource type="Texture2D" uid="uid://dgctirhxdl8y3" path="res://assets/ui/icon_cross.png" id="2_icon_cross"]
[ext_resource type="Texture2D" uid="uid://c6y6ur4qvy1a7" path="res://assets/ui/icon_cog.png" id="3_icon_cog"]

[sub_resource type="LabelSettings" id="LabelSettings_1b6gl"]
font_size = 72
font_color = Color(0.08, 0.12, 0.18, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fsom3")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.92549, 0.960784, 1, 1)

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.08
anchor_right = 0.9
anchor_bottom = 0.92
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="Layout"]
layout_mode = 2
text = "OpenTiles"
label_settings = SubResource("LabelSettings_1b6gl")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Layout"]
layout_mode = 2
text = "Choose how you want to play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CategoryLabel" type="Label" parent="Layout"]
visible = false
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="CategoryButtons" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="GridButton" type="Button" parent="Layout/CategoryButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
text = "Grid"

[node name="ClassicButton" type="Button" parent="Layout/CategoryButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
text = "Classic"

[node name="CategoryDescription" type="Label" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
text = "Pick a collection to see its challenges."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeButtons" type="VBoxContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ModeDescription" type="Label" parent="Layout"]
visible = false
unique_name_in_owner = true
layout_mode = 2
text = "Select a mode to view details."
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeedbackLabel" type="Label" parent="Layout"]
unique_name_in_owner = true
modulate = Color(1, 0.768628, 0.247059, 1)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Footer" type="HBoxContainer" parent="Layout"]
layout_mode = 2
alignment = 1

[node name="QuitButton" type="TextureButton" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.07, 0.07, 0.09, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 96.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_icon_cross")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsButton" type="TextureButton" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.07, 0.07, 0.09, 1)
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -160.0
offset_right = -60.0
offset_bottom = -60.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_icon_cog")
ignore_texture_size = true
stretch_mode = 5
